--- a/spark_hw_02.ipynb
+++ b/spark_hw_02.ipynb
@@ -189,6 +189,54 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "filtered_df.select(\"iso_code\", \"location\", \"date\", \"new_cases\").orderBy(col(\"new_cases\").desc()).show()"
+      ],
+      "metadata": {
+        "id": "XU7fLrXiWwaw",
+        "outputId": "15d39ed8-cff6-4ff2-b9c5-f5bfc84d7890",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+--------------+----------+---------+\n",
+            "|iso_code|      location|      date|new_cases|\n",
+            "+--------+--------------+----------+---------+\n",
+            "|OWID_WRL|         World|2020-03-31|  76845.0|\n",
+            "|OWID_EUR|        Europe|2020-03-31|  36809.0|\n",
+            "|OWID_EUN|European Union|2020-03-31|  30412.0|\n",
+            "|OWID_NAM| North America|2020-03-31|  28016.0|\n",
+            "|     USA| United States|2020-03-31|  26314.0|\n",
+            "|OWID_ASI|          Asia|2020-03-31|   8983.0|\n",
+            "|     ESP|         Spain|2020-03-31|   7967.0|\n",
+            "|     FRA|        France|2020-03-31|   7629.0|\n",
+            "|     DEU|       Germany|2020-03-31|   4923.0|\n",
+            "|     GBR|United Kingdom|2020-03-31|   4534.0|\n",
+            "|     ITA|         Italy|2020-03-31|   4053.0|\n",
+            "|     IRN|          Iran|2020-03-31|   3110.0|\n",
+            "|     TUR|        Turkey|2020-03-31|   2704.0|\n",
+            "|OWID_SAM| South America|2020-03-31|   2196.0|\n",
+            "|     BRA|        Brazil|2020-03-31|   1138.0|\n",
+            "|     CAN|        Canada|2020-03-31|   1129.0|\n",
+            "|     PRT|      Portugal|2020-03-31|   1035.0|\n",
+            "|     BEL|       Belgium|2020-03-31|    876.0|\n",
+            "|     NLD|   Netherlands|2020-03-31|    850.0|\n",
+            "|     ISR|        Israel|2020-03-31|    738.0|\n",
+            "+--------+--------------+----------+---------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "06_FPg0slRAq"
@@ -342,46 +390,13 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_march_21.show(5)"
-      ],
-      "metadata": {
-        "id": "GtKIZq4aPIDo",
-        "outputId": "484e779a-190b-4e1c-caa8-640bcb014920",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+--------+---------+-----------+----------+-----------+---------+------------------+------------+----------+-------------------+-----------------------+---------------------+------------------------------+------------------------+----------------------+-------------------------------+-----------------+------------+------------------------+-------------+-------------------------+---------------------+---------------------------------+----------------------+----------------------------------+---------+-----------+------------------------+----------------------+------------------+-------------------------------+-------------+--------------+-----------+------------------+-----------------+-----------------------+----------------+-------------------------+------------------------------+-----------------------------+-----------------------------------+-------------------------------------+----------------+-----------+------------------+----------+-------------+-------------+--------------+---------------+---------------------+-------------------+--------------+------------+----------------------+--------------------------+---------------+-----------------------+\n",
-            "|iso_code|continent|   location|      date|total_cases|new_cases|new_cases_smoothed|total_deaths|new_deaths|new_deaths_smoothed|total_cases_per_million|new_cases_per_million|new_cases_smoothed_per_million|total_deaths_per_million|new_deaths_per_million|new_deaths_smoothed_per_million|reproduction_rate|icu_patients|icu_patients_per_million|hosp_patients|hosp_patients_per_million|weekly_icu_admissions|weekly_icu_admissions_per_million|weekly_hosp_admissions|weekly_hosp_admissions_per_million|new_tests|total_tests|total_tests_per_thousand|new_tests_per_thousand|new_tests_smoothed|new_tests_smoothed_per_thousand|positive_rate|tests_per_case|tests_units|total_vaccinations|people_vaccinated|people_fully_vaccinated|new_vaccinations|new_vaccinations_smoothed|total_vaccinations_per_hundred|people_vaccinated_per_hundred|people_fully_vaccinated_per_hundred|new_vaccinations_smoothed_per_million|stringency_index| population|population_density|median_age|aged_65_older|aged_70_older|gdp_per_capita|extreme_poverty|cardiovasc_death_rate|diabetes_prevalence|female_smokers|male_smokers|handwashing_facilities|hospital_beds_per_thousand|life_expectancy|human_development_index|\n",
-            "+--------+---------+-----------+----------+-----------+---------+------------------+------------+----------+-------------------+-----------------------+---------------------+------------------------------+------------------------+----------------------+-------------------------------+-----------------+------------+------------------------+-------------+-------------------------+---------------------+---------------------------------+----------------------+----------------------------------+---------+-----------+------------------------+----------------------+------------------+-------------------------------+-------------+--------------+-----------+------------------+-----------------+-----------------------+----------------+-------------------------+------------------------------+-----------------------------+-----------------------------------+-------------------------------------+----------------+-----------+------------------+----------+-------------+-------------+--------------+---------------+---------------------+-------------------+--------------+------------+----------------------+--------------------------+---------------+-----------------------+\n",
-            "|     AFG|     Asia|Afghanistan|2021-03-23|    56177.0|     24.0|              26.0|      2466.0|       2.0|              0.857|               1443.087|                0.617|                         0.668|                  63.347|                 0.051|                          0.022|             1.27|        NULL|                    NULL|         NULL|                     NULL|                 NULL|                             NULL|                  NULL|                              NULL|     NULL|       NULL|                    NULL|                  NULL|              NULL|                           NULL|         NULL|          NULL|       NULL|              NULL|             NULL|                   NULL|            NULL|                   3000.0|                          NULL|                         NULL|                               NULL|                                 77.0|           12.04|3.8928341E7|            54.422|      18.6|        2.581|        1.337|      1803.987|           NULL|              597.029|               9.59|          NULL|        NULL|                37.746|                       0.5|          64.83|                  0.511|\n",
-            "|     AFG|     Asia|Afghanistan|2021-03-24|    56192.0|     15.0|            25.143|      2466.0|       0.0|              0.857|               1443.473|                0.385|                         0.646|                  63.347|                   0.0|                          0.022|             1.27|        NULL|                    NULL|         NULL|                     NULL|                 NULL|                             NULL|                  NULL|                              NULL|     NULL|       NULL|                    NULL|                  NULL|              NULL|                           NULL|         NULL|          NULL|       NULL|              NULL|             NULL|                   NULL|            NULL|                   3000.0|                          NULL|                         NULL|                               NULL|                                 77.0|            8.33|3.8928341E7|            54.422|      18.6|        2.581|        1.337|      1803.987|           NULL|              597.029|               9.59|          NULL|        NULL|                37.746|                       0.5|          64.83|                  0.511|\n",
-            "|     AFG|     Asia|Afghanistan|2021-03-25|    56226.0|     34.0|              26.0|      2467.0|       1.0|              0.714|               1444.346|                0.873|                         0.668|                  63.373|                 0.026|                          0.018|             1.29|        NULL|                    NULL|         NULL|                     NULL|                 NULL|                             NULL|                  NULL|                              NULL|     NULL|       NULL|                    NULL|                  NULL|              NULL|                           NULL|         NULL|          NULL|       NULL|              NULL|             NULL|                   NULL|            NULL|                   3000.0|                          NULL|                         NULL|                               NULL|                                 77.0|            8.33|3.8928341E7|            54.422|      18.6|        2.581|        1.337|      1803.987|           NULL|              597.029|               9.59|          NULL|        NULL|                37.746|                       0.5|          64.83|                  0.511|\n",
-            "|     AFG|     Asia|Afghanistan|2021-03-26|    56254.0|     28.0|            26.429|      2467.0|       0.0|              0.714|               1445.065|                0.719|                         0.679|                  63.373|                   0.0|                          0.018|             1.31|        NULL|                    NULL|         NULL|                     NULL|                 NULL|                             NULL|                  NULL|                              NULL|     NULL|       NULL|                    NULL|                  NULL|              NULL|                           NULL|         NULL|          NULL|       NULL|              NULL|             NULL|                   NULL|            NULL|                   3000.0|                          NULL|                         NULL|                               NULL|                                 77.0|            8.33|3.8928341E7|            54.422|      18.6|        2.581|        1.337|      1803.987|           NULL|              597.029|               9.59|          NULL|        NULL|                37.746|                       0.5|          64.83|                  0.511|\n",
-            "|     AFG|     Asia|Afghanistan|2021-03-27|    56290.0|     36.0|            28.143|      2469.0|       2.0|                1.0|                1445.99|                0.925|                         0.723|                  63.424|                 0.051|                          0.026|             1.33|        NULL|                    NULL|         NULL|                     NULL|                 NULL|                             NULL|                  NULL|                              NULL|     NULL|       NULL|                    NULL|                  NULL|              NULL|                           NULL|         NULL|          NULL|       NULL|              NULL|             NULL|                   NULL|            NULL|                   3000.0|                          NULL|                         NULL|                               NULL|                                 77.0|            8.33|3.8928341E7|            54.422|      18.6|        2.581|        1.337|      1803.987|           NULL|              597.029|               9.59|          NULL|        NULL|                37.746|                       0.5|          64.83|                  0.511|\n",
-            "+--------+---------+-----------+----------+-----------+---------+------------------+------------+----------+-------------------+-----------------------+---------------------+------------------------------+------------------------+----------------------+-------------------------------+-----------------+------------+------------------------+-------------+-------------------------+---------------------+---------------------------------+----------------------+----------------------------------+---------+-----------+------------------------+----------------------+------------------+-------------------------------+-------------+--------------+-----------+------------------+-----------------+-----------------------+----------------+-------------------------+------------------------------+-----------------------------+-----------------------------------+-------------------------------------+----------------+-----------+------------------+----------+-------------+-------------+--------------+---------------+---------------------+-------------------+--------------+------------+----------------------+--------------------------+---------------+-----------------------+\n",
-            "only showing top 5 rows\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 83,
       "metadata": {
         "id": "XBpUzALkHh5D",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0adc7d3a-9960-4c4b-ed7d-cc7217402f1a"
+        "outputId": "86e2082c-1fc9-4abb-a63d-7d324a526e7c"
       },
       "outputs": [
         {
