--- a/spark_hw_02.ipynb
+++ b/spark_hw_02.ipynb
@@ -194,11 +194,11 @@
         "filtered_df.select(\"iso_code\", \"location\", \"date\", \"new_cases\").orderBy(col(\"new_cases\").desc()).show()"
       ],
       "metadata": {
-        "id": "XU7fLrXiWwaw",
-        "outputId": "15d39ed8-cff6-4ff2-b9c5-f5bfc84d7890",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XU7fLrXiWwaw",
+        "outputId": "15d39ed8-cff6-4ff2-b9c5-f5bfc84d7890"
       },
       "execution_count": 73,
       "outputs": [
@@ -362,6 +362,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 84,
+      "metadata": {
+        "id": "Btsu8tYXRzCW"
+      },
+      "outputs": [],
+      "source": [
+        "from pyspark.sql.window import Window\n",
+        "from pyspark.sql.functions import lag, max"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 26,
       "metadata": {
         "id": "jal4_J8PHMVv",
@@ -390,43 +402,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "source": [
+        "# Определение окна, которое делит данные по location\n",
+        "window_spec = Window.partitionBy(\"location\")\n",
+        "\n",
+        "# Добавление новой колонки с максимальным значением в каждой группе\n",
+        "df_top_10_locs = df_march_21.withColumn(\"max_new_cases\", max(\"new_cases\").over(window_spec))\n",
+        "\n",
+        "# Вывод результатов\n",
+        "df_top_10_locs = df_top_10_locs.select(\"date\", \"location\", \"max_new_cases\").filter(\"iso_code NOT LIKE '%OWID%'\")\n",
+        "# Выше также отфильтровали iso_code 'OWID_', предоставляющий данные в разрезе континентального и мирового масштаба\n",
+        "df_top_10_locs = df_top_10_locs.filter(col(\"new_cases\") == col(\"max_new_cases\")).orderBy(df_top_10_locs.max_new_cases.desc()) # Здесь не применяем join, в разрезе задачи это можно не делать\n",
+        "df_top_10_locs.show(10)"
+      ],
       "metadata": {
-        "id": "XBpUzALkHh5D",
+        "id": "5SJvP5yWdIfa",
+        "outputId": "07567066-4f4d-48ae-aa76-713501a71181",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "86e2082c-1fc9-4abb-a63d-7d324a526e7c"
+        }
       },
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+----------+-------------+---------+\n",
-            "|      date|     location|new_cases|\n",
-            "+----------+-------------+---------+\n",
-            "|2021-03-25|       Brazil| 100158.0|\n",
-            "|2021-03-31|       Brazil|  90638.0|\n",
-            "|2021-03-24|       Brazil|  89992.0|\n",
-            "|2021-03-24|United States|  86960.0|\n",
-            "|2021-03-27|       Brazil|  85948.0|\n",
-            "|2021-03-30|       Brazil|  84494.0|\n",
-            "|2021-03-26|       Brazil|  84245.0|\n",
-            "|2021-03-23|       Brazil|  82493.0|\n",
-            "|2021-03-26|United States|  77321.0|\n",
-            "|2021-03-31|        India|  72330.0|\n",
-            "+----------+-------------+---------+\n",
+            "+----------+-------------+-------------+\n",
+            "|      date|     location|max_new_cases|\n",
+            "+----------+-------------+-------------+\n",
+            "|2021-03-25|       Brazil|     100158.0|\n",
+            "|2021-03-24|United States|      86960.0|\n",
+            "|2021-03-31|        India|      72330.0|\n",
+            "|2021-03-24|       France|      65392.0|\n",
+            "|2021-03-31|       Turkey|      39302.0|\n",
+            "|2021-03-26|       Poland|      35145.0|\n",
+            "|2021-03-31|      Germany|      25014.0|\n",
+            "|2021-03-26|        Italy|      24076.0|\n",
+            "|2021-03-25|         Peru|      19206.0|\n",
+            "|2021-03-26|      Ukraine|      18226.0|\n",
+            "+----------+-------------+-------------+\n",
             "only showing top 10 rows\n",
             "\n"
           ]
         }
-      ],
-      "source": [
-        "# Группируем данные по стране и находим максимальное количество новых случаев за один день\n",
-        "new_cases = df_march_21.select(\"date\", \"location\", \"new_cases\").filter(\"iso_code NOT LIKE '%OWID%'\").orderBy(df_march_21.new_cases.desc())\n",
-        "# Выше также отфильтровали iso_code 'OWID_', предоставляющий данные в разрезе континентального и мирового масштаба\n",
-        "new_cases.show(10)"
       ]
     },
     {
@@ -436,18 +455,6 @@
       },
       "source": [
         "###Шаг 6: Изменение случаев относительно предыдущего дня в России за последнюю неделю марта 2021"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 49,
-      "metadata": {
-        "id": "Btsu8tYXRzCW"
-      },
-      "outputs": [],
-      "source": [
-        "from pyspark.sql.window import Window\n",
-        "from pyspark.sql.functions import lag"
       ]
     },
     {
