--- a/spark_hw_02.ipynb
+++ b/spark_hw_02.ipynb
@@ -412,15 +412,15 @@
         "# Вывод результатов\n",
         "df_top_10_locs = df_top_10_locs.select(\"date\", \"location\", \"max_new_cases\").filter(\"iso_code NOT LIKE '%OWID%'\")\n",
         "# Выше также отфильтровали iso_code 'OWID_', предоставляющий данные в разрезе континентального и мирового масштаба\n",
-        "df_top_10_locs = df_top_10_locs.filter(col(\"new_cases\") == col(\"max_new_cases\")).orderBy(df_top_10_locs.max_new_cases.desc()) # Здесь не применяем join, в разрезе задачи это можно не делать\n",
+        "df_top_10_locs = df_top_10_locs.filter(col(\"new_cases\") == col(\"max_new_cases\")).orderBy(df_top_10_locs.max_new_cases.desc())\n",
         "df_top_10_locs.show(10)"
       ],
       "metadata": {
-        "id": "5SJvP5yWdIfa",
-        "outputId": "07567066-4f4d-48ae-aa76-713501a71181",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5SJvP5yWdIfa",
+        "outputId": "07567066-4f4d-48ae-aa76-713501a71181"
       },
       "execution_count": 104,
       "outputs": [
