Fix 5 - added OWID-filter on step 3

--- a/spark_hw_02.ipynb
+++ b/spark_hw_02.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uspOEcCkcIMV",
-        "outputId": "272ee8a8-5f74-44e7-81e7-b600da92e3b6"
+        "outputId": "6cdb0a3f-b612-43b7-97fa-74919eddc33d"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "j0ruZxEpb_NU"
       },
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "5N0WZl5CcirK"
       },
@@ -82,13 +82,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zToLcepLk1W_",
-        "outputId": "4b89818b-c222-467c-f691-869b8ec1cda9"
+        "outputId": "69c480e0-2f8b-497b-a680-83919f63af5b"
       },
       "outputs": [
         {
@@ -115,12 +115,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "collapsed": true,
-        "id": "KznBbveGqRkE"
+        "id": "KznBbveGqRkE",
+        "outputId": "54180146-787f-4ea7-af4a-005c7e7884f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- iso_code: string (nullable = true)\n",
+            " |-- continent: string (nullable = true)\n",
+            " |-- location: string (nullable = true)\n",
+            " |-- date: date (nullable = true)\n",
+            " |-- total_cases: double (nullable = true)\n",
+            " |-- new_cases: double (nullable = true)\n",
+            " |-- new_cases_smoothed: double (nullable = true)\n",
+            " |-- total_deaths: double (nullable = true)\n",
+            " |-- new_deaths: double (nullable = true)\n",
+            " |-- new_deaths_smoothed: double (nullable = true)\n",
+            " |-- total_cases_per_million: double (nullable = true)\n",
+            " |-- new_cases_per_million: double (nullable = true)\n",
+            " |-- new_cases_smoothed_per_million: double (nullable = true)\n",
+            " |-- total_deaths_per_million: double (nullable = true)\n",
+            " |-- new_deaths_per_million: double (nullable = true)\n",
+            " |-- new_deaths_smoothed_per_million: double (nullable = true)\n",
+            " |-- reproduction_rate: double (nullable = true)\n",
+            " |-- icu_patients: double (nullable = true)\n",
+            " |-- icu_patients_per_million: double (nullable = true)\n",
+            " |-- hosp_patients: double (nullable = true)\n",
+            " |-- hosp_patients_per_million: double (nullable = true)\n",
+            " |-- weekly_icu_admissions: double (nullable = true)\n",
+            " |-- weekly_icu_admissions_per_million: double (nullable = true)\n",
+            " |-- weekly_hosp_admissions: double (nullable = true)\n",
+            " |-- weekly_hosp_admissions_per_million: double (nullable = true)\n",
+            " |-- new_tests: double (nullable = true)\n",
+            " |-- total_tests: double (nullable = true)\n",
+            " |-- total_tests_per_thousand: double (nullable = true)\n",
+            " |-- new_tests_per_thousand: double (nullable = true)\n",
+            " |-- new_tests_smoothed: double (nullable = true)\n",
+            " |-- new_tests_smoothed_per_thousand: double (nullable = true)\n",
+            " |-- positive_rate: double (nullable = true)\n",
+            " |-- tests_per_case: double (nullable = true)\n",
+            " |-- tests_units: string (nullable = true)\n",
+            " |-- total_vaccinations: double (nullable = true)\n",
+            " |-- people_vaccinated: double (nullable = true)\n",
+            " |-- people_fully_vaccinated: double (nullable = true)\n",
+            " |-- new_vaccinations: double (nullable = true)\n",
+            " |-- new_vaccinations_smoothed: double (nullable = true)\n",
+            " |-- total_vaccinations_per_hundred: double (nullable = true)\n",
+            " |-- people_vaccinated_per_hundred: double (nullable = true)\n",
+            " |-- people_fully_vaccinated_per_hundred: double (nullable = true)\n",
+            " |-- new_vaccinations_smoothed_per_million: double (nullable = true)\n",
+            " |-- stringency_index: double (nullable = true)\n",
+            " |-- population: double (nullable = true)\n",
+            " |-- population_density: double (nullable = true)\n",
+            " |-- median_age: double (nullable = true)\n",
+            " |-- aged_65_older: double (nullable = true)\n",
+            " |-- aged_70_older: double (nullable = true)\n",
+            " |-- gdp_per_capita: double (nullable = true)\n",
+            " |-- extreme_poverty: double (nullable = true)\n",
+            " |-- cardiovasc_death_rate: double (nullable = true)\n",
+            " |-- diabetes_prevalence: double (nullable = true)\n",
+            " |-- female_smokers: double (nullable = true)\n",
+            " |-- male_smokers: double (nullable = true)\n",
+            " |-- handwashing_facilities: double (nullable = true)\n",
+            " |-- hospital_beds_per_thousand: double (nullable = true)\n",
+            " |-- life_expectancy: double (nullable = true)\n",
+            " |-- human_development_index: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "df.printSchema()"
       ]
@@ -137,13 +209,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cM_q-1q0ktA5",
-        "outputId": "d5dd03b5-4809-4e01-8f4c-ceb31f9af095"
+        "outputId": "278b2a3e-a747-45b6-90b9-da5af130aeb3"
       },
       "outputs": [
         {
@@ -154,7 +226,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ],
       "source": [
@@ -163,28 +235,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rZ7ylkrxk0Ix",
-        "outputId": "93726116-2a3a-4ed3-d4db-abda27897983"
+        "outputId": "06d1b88d-3b70-4e6d-fc45-5d966008bb2a"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "189"
+              "179"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 10
         }
       ],
       "source": [
-        "filtered_df = df.filter(col(\"date\") == lit(\"2020-03-31\"))\n",
+        "filtered_df = df.filter(col(\"date\") == lit(\"2020-03-31\")).filter(\"iso_code NOT LIKE '%OWID%'\")\n",
         "filtered_df.count()"
       ]
     },
@@ -198,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XU7fLrXiWwaw",
-        "outputId": "15d39ed8-cff6-4ff2-b9c5-f5bfc84d7890"
+        "outputId": "a1e522ca-3370-443b-d3ce-b393da9c5344"
       },
-      "execution_count": 73,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,12 +281,7 @@
             "+--------+--------------+----------+---------+\n",
             "|iso_code|      location|      date|new_cases|\n",
             "+--------+--------------+----------+---------+\n",
-            "|OWID_WRL|         World|2020-03-31|  76845.0|\n",
-            "|OWID_EUR|        Europe|2020-03-31|  36809.0|\n",
-            "|OWID_EUN|European Union|2020-03-31|  30412.0|\n",
-            "|OWID_NAM| North America|2020-03-31|  28016.0|\n",
             "|     USA| United States|2020-03-31|  26314.0|\n",
-            "|OWID_ASI|          Asia|2020-03-31|   8983.0|\n",
             "|     ESP|         Spain|2020-03-31|   7967.0|\n",
             "|     FRA|        France|2020-03-31|   7629.0|\n",
             "|     DEU|       Germany|2020-03-31|   4923.0|\n",
@@ -222,13 +289,18 @@
             "|     ITA|         Italy|2020-03-31|   4053.0|\n",
             "|     IRN|          Iran|2020-03-31|   3110.0|\n",
             "|     TUR|        Turkey|2020-03-31|   2704.0|\n",
-            "|OWID_SAM| South America|2020-03-31|   2196.0|\n",
             "|     BRA|        Brazil|2020-03-31|   1138.0|\n",
             "|     CAN|        Canada|2020-03-31|   1129.0|\n",
             "|     PRT|      Portugal|2020-03-31|   1035.0|\n",
             "|     BEL|       Belgium|2020-03-31|    876.0|\n",
             "|     NLD|   Netherlands|2020-03-31|    850.0|\n",
             "|     ISR|        Israel|2020-03-31|    738.0|\n",
+            "|     CHE|   Switzerland|2020-03-31|    683.0|\n",
+            "|     AUT|       Austria|2020-03-31|    562.0|\n",
+            "|     PHL|   Philippines|2020-03-31|    538.0|\n",
+            "|     RUS|        Russia|2020-03-31|    501.0|\n",
+            "|     SWE|        Sweden|2020-03-31|    475.0|\n",
+            "|     IRL|       Ireland|2020-03-31|    325.0|\n",
             "+--------+--------------+----------+---------+\n",
             "only showing top 20 rows\n",
             "\n"
@@ -253,7 +325,7 @@
       "metadata": {
         "id": "8A_AmX1hLKhz"
       },
-      "execution_count": 21,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -266,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "69LYgjPfMhHA",
-        "outputId": "e30b93d3-bfc2-4f58-ea17-2193fa5f5841"
+        "outputId": "77b98393-e388-4886-e1ee-cedab5b502e3"
       },
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,12 +349,7 @@
             "+--------+--------------+-------------+-----------+\n",
             "|iso_code|      location|   population|total_cases|\n",
             "+--------+--------------+-------------+-----------+\n",
-            "|OWID_WRL|         World|7.794798729E9|   875794.0|\n",
-            "|OWID_EUR|        Europe| 7.48680069E8|   465241.0|\n",
-            "|OWID_EUN|European Union|  4.4491906E8|   397713.0|\n",
-            "|OWID_NAM| North America| 5.92072204E8|   205321.0|\n",
             "|     USA| United States| 3.31002647E8|   192301.0|\n",
-            "|OWID_ASI|          Asia|4.639847425E9|   179033.0|\n",
             "|     ITA|         Italy|  6.0461828E7|   105792.0|\n",
             "|     ESP|         Spain|  4.6754783E7|    95923.0|\n",
             "|     CHN|         China|1.439323774E9|    82279.0|\n",
@@ -291,7 +358,12 @@
             "|     IRN|          Iran|  8.3992953E7|    44605.0|\n",
             "|     GBR|United Kingdom|  6.7886004E7|    38815.0|\n",
             "|     CHE|   Switzerland|    8654618.0|    16605.0|\n",
-            "|OWID_SAM| South America| 4.30759772E8|    14492.0|\n",
+            "|     TUR|        Turkey|  8.4339067E7|    13531.0|\n",
+            "|     BEL|       Belgium|  1.1589616E7|    12775.0|\n",
+            "|     NLD|   Netherlands|  1.7134873E7|    12667.0|\n",
+            "|     AUT|       Austria|    9006400.0|    10180.0|\n",
+            "|     KOR|   South Korea|  5.1269183E7|     9786.0|\n",
+            "|     CAN|        Canada|  3.7742157E7|     8527.0|\n",
             "+--------+--------------+-------------+-----------+\n",
             "\n"
           ]
@@ -300,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 14,
       "metadata": {
         "id": "fTG8asy1xpvk"
       },
@@ -311,13 +383,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ex-HrY6wzJpk",
-        "outputId": "d5a8e519-0dfb-471d-bd13-df9cfe23bf3c"
+        "outputId": "6ad5371c-22bb-471d-a6c0-6fa47ed1af2b"
       },
       "outputs": [
         {
@@ -330,18 +402,18 @@
             "|     ESP|         Spain| 0.20516189755388234|\n",
             "|     CHE|   Switzerland| 0.19186288753587968|\n",
             "|     ITA|         Italy|  0.1749732078891164|\n",
-            "|OWID_EUN|European Union| 0.08938996679530879|\n",
+            "|     AUT|       Austria| 0.11303073370047965|\n",
+            "|     BEL|       Belgium| 0.11022798339479065|\n",
             "|     DEU|       Germany| 0.08570615766540952|\n",
             "|     FRA|        France| 0.07671280171255115|\n",
-            "|OWID_EUR|        Europe| 0.06214149665042038|\n",
+            "|     NLD|   Netherlands| 0.07392526340872209|\n",
             "|     USA| United States|0.058096514255367875|\n",
             "|     GBR|United Kingdom| 0.05717673410265833|\n",
             "|     IRN|          Iran|0.053105645660535356|\n",
-            "|OWID_NAM| North America|0.034678371761563055|\n",
-            "|OWID_WRL|         World|0.011235620449591213|\n",
+            "|     CAN|        Canada|0.022592773380705294|\n",
+            "|     KOR|   South Korea|0.019087489652409712|\n",
+            "|     TUR|        Turkey|0.016043573258878948|\n",
             "|     CHN|         China|0.005716503922626098|\n",
-            "|OWID_ASI|          Asia|0.003858596708058...|\n",
-            "|OWID_SAM| South America|0.003364288158273...|\n",
             "+--------+--------------+--------------------+\n",
             "\n"
           ]
@@ -362,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 16,
       "metadata": {
         "id": "Btsu8tYXRzCW"
       },
@@ -374,13 +446,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 17,
       "metadata": {
         "id": "jal4_J8PHMVv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b3d2c1d-deea-421a-f5b0-e7cf57666cb1"
+        "outputId": "7006390f-79f8-4e94-c072-e5b425c922e4"
       },
       "outputs": [
         {
@@ -391,7 +463,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 17
         }
       ],
       "source": [
@@ -420,9 +492,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5SJvP5yWdIfa",
-        "outputId": "07567066-4f4d-48ae-aa76-713501a71181"
+        "outputId": "ddc50528-ddf1-471d-f285-5e14ac82ac3e"
       },
-      "execution_count": 104,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,13 +531,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DdpEgTcIQVEo",
-        "outputId": "7945855f-7d27-46fc-fbfe-5ed83c2a9ec9"
+        "outputId": "cdb2ba7f-29c3-427e-9f59-6bb2e7d5efb4"
       },
       "outputs": [
         {
@@ -494,13 +566,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "syjSRahEQXkh",
-        "outputId": "19935e40-dc55-4150-ea9d-28bad050a3a3"
+        "outputId": "a2bc82b3-5246-4768-b980-5ce6d170c96f"
       },
       "outputs": [
         {
@@ -529,13 +601,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7jrlRPaPQaH4",
-        "outputId": "ff339318-a65c-4c4c-8fc9-15b748215c09"
+        "outputId": "1d5de440-2a61-49b0-fff4-c3b7c831461b"
       },
       "outputs": [
         {
@@ -564,13 +636,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ToqgNBtQfEB",
-        "outputId": "a276b6bd-6fe8-4883-d1ce-dcc9c9adf952"
+        "outputId": "355a8aa0-b1cc-47ed-f248-43f98448577d"
       },
       "outputs": [
         {
